--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,19 +2,23 @@ server:
   port: 8081
 
 spring:
-  flyway:
-    locations: classpath:migration
+#  flyway:
+#    locations: classpath:migration
 
-  jpa:
-    database: postgresql
-    show-sql: true
-    generate-ddl: false
+#  jpa:
+#    database: postgresql
+#    show-sql: true
+    #    generate-ddl: false
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/vasilevskiy
 
-  datasource:
-    platform: postgres
-    url: jdbc:postgresql://localhost:5432/postgres
-    username: vasilevskiy
-    password: password
+#  datasource:
+#    platform: postgres
+#    url: jdbc:postgresql://localhost:5432/postgres
+#    username: vasilevskiy
+#    password: password
+
 
 logging:
   level:
