--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
             <version>3.13.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>1.12.4</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
